Before adding images

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,9 +1,9 @@
 \chapter{گرافلت کرنل گاوسی}\label{chap:gaussian-graphlet-kernel}
-گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{\فرضیه بازسازی گراف}\پانوشت{\متن‌لاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
+گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{\فرضیه بازسازی گراف}\پانوشت{\متن‌لاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. بنابراین انتظار داریم اگر دو گراف شبیه هم باشند، گردایه‌ی زیرگراف‌های آن‌ها نیز مشابه باشد. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، این مقایسه دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
 در این فصل ابتدا نحوه شمارش گرافلت‌ها را شرح داده و سپس گرافلت کرنل گاوسی را معرفی می‌کنیم و به سنجش قدرت آن در جداسازی مدل‌های تصادفی گراف از یکدیگر، می‌پردازیم.
 
 \section{گرافلت‌ها و شمارش آن‌ها}
-گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با نماد $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متن‌لاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متن‌لاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک گروه اوربیتی تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets} اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به یک گروه اوربیتی است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متن‌لاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متن‌لاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
+گرافلت‌ها، زیرگراف‌های کوچک القایی بین سه تا پنج رأس از یک گراف بزرگتر هستند\جستار{Przulj_2004} که با برچسب $G1,\ldots,G29$ در شکل \ارجا{fig:graphlets} نمایش داده شده‌اند (معمولاً زیرگراف تک یالی $G0$ هم به این مجموعه اضافه می‌شود).  رئوس هر گرافلت به گروه‌های خودریختی\پانوشت{\متن‌لاتین{automorphism}} تقسیم می‌شوند که به آن‌ها اوربیت\پانوشت{\متن‌لاتین{orbit}} گفته می‌شود. دو رأس از یک گرافلت به یک گروه اوربیتی تعلق دارند اگر توسط یک تابع خودریختی به یکدیگر نگاشت شوند. در شکل \ارجا{fig:graphlets} اوربیت‌ها با اعداد صفر تا 72 روی هر گرافلت مشخص شده‌اند و رنگ رئوس نشان‌دهنده تعلق آن‌ها به یک گروه اوربیتی است. از گرافلت‌ها و اوربیت‌ها در اندازه‌گیری شباهت ساختاری شبکه‌های تعاملات پروتئینی\پانوشت{\متن‌لاتین{Protein Interaction Networks}}\جستار{Przulj_2007}، انتخاب مدل تصادفی برای آن‌ها\جستار{Przulj_2004} و همچنین برای تراز کردن\پانوشت{\متن‌لاتین{alignment}} این شبکه‌ها\جستار{Milenkovic_2010}\جستار{Kuchaiev_2010}\جستار{Memisevic_2012} استفاده شده‌است.
 
 شمارش گرافلت‌های یک گراف (و طبیعتاً اوربیت‌ها) از لحاظ محاسباتی بسیار زمانبر است. به همین دلیل معمولاً از روش‌های نمونه‌برداری برای تخمین تعداد آن‌ها استفاده می‌شود\جستار{Rahman_2014}\جستار{Milenkovic_2008}. به تازگی الگوریتم ترکیبیاتی شمارش اوربیت‌ها\جستار{Hovcevar_2014} ارائه شده‌است که تعداد آن‌ها را به طور دقیق و در زمان بسیار کم محاسبه می‌نماید. با کمی تغییر در این الگوریتم، می‌توان بجای اوربیت‌ها، تعداد گرافلت‌ها را بدست آورد. ذکر این نکته ضروری است که برخلاف تصور، استفاده از اوربیت‌ها برای تعریف کرنل (بجای گرافلت‌ها) موجب افزایش نویز و در نتیجه، کاهش دقت می‌گردد. در بخش \ارجا{sec:graphlet-vs-orbit} به بررسی این مسئله می‌پردازیم.
 
@@ -18,20 +18,19 @@
 \subsection{تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها}
 
 \subsection{مقایسه سرعت اجرا}
-
+برای نوشتن ریاضی $F$ خیلی خوبه
 \section{گرافلت کرنل گاوسی}
-گرافلت‌کرنل 
-برای دو گراف $G$ و $G^\prime$، گرافلت کرنل گاوسی $k$ را به صورت
+فرض کنید برای دو گراف $G$ و $G^\prime$ ، بردار شمارش گرافلت‌ها، $C_G$ و $C_{G^\prime}$ را در اختیار داریم. حال باید این دو بردار را با یکدیگر مقایسه کرده و فاصله آن‌ها را تعیین کنیم. برای کاهش تأثیر اندازه گراف‌ بر مقایسه و همچنین جلوگیری از تأثیر فراوانی زیاد یک گرافلت بر کل مقایسه، بردارها را به صورت
+\begin{equation}
+\label{eq:feature-vector}
+\hat{C}_G = (-\log(\dfrac{C_G(0)}{\sum _{i=0}^{29} C_G(i)}),...,-\log(\dfrac{C_G(29)}{\sum _{i=0}^{29} C_G(i)}))
+\end{equation}
+نرمال می‌کنیم. حال می‌توان از هر تابع کرنل دلخواهی برای یافتن فاصله این بردارها از یکدیگر، استفاده کرد. طبیعی است که انتخاب تابع مقایسه در دقت کرنل نهایی بسیار تأثیرگذار خواهد بود. همانطور که در بخش \ارجا{sec:compare-kernels-on-graphlet-vector} خواهید دید، تابع گاوسی روی این بردارها بهترین عملکرد را دارد. بنابراین گرافلت کرنل گاوسی $k$ را به صورت
 \begin{equation}
 \label{eqn:kernelfunction}
-k(G,G') = exp(-\gamma\parallel f_G - f_{G'}\parallel^2)
+k(G,G') = exp(-\gamma\parallel \hat{C}_G - \hat{C}_{G'}\parallel^2)
 \end{equation}
-تعریف می‌کنیم که در آن $f_G$ بردار نرمال شده‌ی تعداد گرافلت‌های $G$ است:
-\begin{equation}
-\label{eqn:featurevector}
-f_G = (-\log(\dfrac{n_0}{\sum _{j=0}^{29} n_j}),...,-\log(\dfrac{n_{29}}{\sum _{j=0}^{29} n_j}))
-\end{equation}
-در اینجا، $n_i$ تعداد گرافلت $G_i$ در گراف $G$ است.
+تعریف می‌کنیم که در آن $\gamma = \dfrac{1}{2\sigma^2}$ است.
 
 \section{عملکرد گرافلت کرنل گاوسی}
 \section{گرافلت کرنل گاوسی روی رئوس}
