Befor changing chapter 3 dramatically

--- a/biblio.bib
+++ b/biblio.bib
@@ -515,3 +515,156 @@
   pages={961--968},
   year={1957}
 }
+@article{Whisstock_2003,
+  doi = {10.1017/s0033583503003901},
+  url = {http://dx.doi.org/10.1017/S0033583503003901},
+  year = {2003},
+  month = {Aug},
+  publisher = {Cambridge University Press (CUP)},
+  volume = {36},
+  number = {3},
+  pages = {307-340},
+  author = {James C. Whisstock and Arthur M. Lesk},
+  title = {{Prediction of protein function from protein sequence and structure}},
+  journal = {Quart. Rev. Biophys.},
+}
+@article{Binkowski_2003,
+  doi = {10.1093/nar/gkg512},
+  url = {http://dx.doi.org/10.1093/nar/gkg512},
+  year = {2003},
+  month = {Jul},
+  publisher = {Oxford University Press (OUP)},
+  volume = {31},
+  number = {13},
+  pages = {3352-3355},
+  author = {T. A. Binkowski},
+  title = {{CASTp: Computed Atlas of Surface Topography of proteins}},
+  journal = {Nucleic Acids Research},
+}
+@article{Xenarios_2002,
+  doi = {10.1093/nar/30.1.303},
+  url = {http://dx.doi.org/10.1093/nar/30.1.303},
+  year = {2002},
+  month = {Jan},
+  publisher = {Oxford University Press (OUP)},
+  volume = {30},
+  number = {1},
+  pages = {303-305},
+  author = {I. Xenarios},
+  title = {{DIP the Database of Interacting Proteins: a research tool for studying cellular networks of protein interactions}},
+  journal = {Nucleic Acids Research},
+}
+@article{Yao_2003,
+  doi = {10.1016/s0022-2836(02)01336-0},
+  url = {http://dx.doi.org/10.1016/S0022-2836(02)01336-0},
+  year = {2003},
+  month = {Feb},
+  publisher = {Elsevier BV},
+  volume = {326},
+  number = {1},
+  pages = {255-261},
+  author = {Hui Yao and David M. Kristensen and Ivana Mihalek and Mathew E. Sowa and Chad Shaw and Marek Kimmel and Lydia Kavraki and Olivier Lichtarge},
+  title = {{An Accurate Sensitive, and Scalable Method to Identify Functional Sites in Protein Structures}},
+  journal = {Journal of Molecular Biology},
+}
+@article{Pal_2005,
+  doi = {10.1016/j.str.2004.10.015},
+  url = {http://dx.doi.org/10.1016/j.str.2004.10.015},
+  year = {2005},
+  month = {Jan},
+  publisher = {Elsevier BV},
+  volume = {13},
+  number = {1},
+  pages = {121-130},
+  author = {Debnath Pal and David Eisenberg},
+  title = {{Inference of Protein Function from Protein Structure}},
+  journal = {Structure},
+}
+@article{Laskowski_2005,
+  doi = {10.1093/nar/gki414},
+  url = {http://dx.doi.org/10.1093/nar/gki414},
+  year = {2005},
+  month = {Jul},
+  publisher = {Oxford University Press (OUP)},
+  volume = {33},
+  number = {Web Server},
+  pages = {W89-W93},
+  author = {R. A. Laskowski and J. D. Watson and J. M. Thornton},
+  title = {{ProFunc: a server for predicting protein function from 3D structure}},
+  journal = {Nucleic Acids Research},
+}
+@article{Dobson_2003,
+  doi = {10.1016/s0022-2836(03)00628-4},
+  url = {http://dx.doi.org/10.1016/S0022-2836(03)00628-4},
+  year = {2003},
+  month = {Jul},
+  publisher = {Elsevier BV},
+  volume = {330},
+  number = {4},
+  pages = {771-783},
+  author = {Paul D. Dobson and Andrew J. Doig},
+  title = {{Distinguishing Enzyme Structures from Non-enzymes Without Alignments}},
+  journal = {Journal of Molecular Biology},
+}
+@article{Wagner_1983,
+  doi = {10.1002/anie.198308161},
+  url = {http://dx.doi.org/10.1002/anie.198308161},
+  year  = {1983},
+  month = {nov},
+  publisher = {Wiley-Blackwell},
+  volume = {22},
+  number = {11},
+  pages = {816--828},
+  author = {Ingrid Wagner and Hans Musso},
+  title = {New Naturally Occurring Amino Acids},
+  journal = {Angew. Chem. Int. Ed. Engl.}
+}
+@article{Lang_2011,
+  title={BKM-react, an integrated biochemical reaction database},
+  author={Lang, Maren and Stelzer, Michael and Schomburg, Dietmar},
+  journal={BMC biochemistry},
+  volume={12},
+  number={1},
+  pages={42},
+  year={2011},
+  publisher={BioMed Central Ltd}
+}
+@article{Schomburg_2012,
+  title={BRENDA in 2013: integrated reactions, kinetic data, enzyme function data, improved disease classification: new options and contents in BRENDA},
+  author={Schomburg, Ida and Chang, Antje and Placzek, Sandra and S{\"o}hngen, Carola and Rother, Michael and Lang, Maren and Munaretto, Cornelia and Ulas, Susanne and Stelzer, Michael and Grote, Andreas and others},
+  journal={Nucleic acids research},
+  pages={gks1049},
+  year={2012},
+  publisher={Oxford Univ Press}
+}
+@book{Alberts_2014,
+  Author = {Bruce Alberts and Alexander Johnson and Julian Lewis and David Morgan and Martin Raff and Keith Roberts and Peter Walter},
+  Title = {Molecular Biology of the Cell},
+  Publisher = {Garland Science},
+  Year = {2014},
+  ISBN = {0815344325}
+}
+@book{0122271645,
+  editors = {Edwin C. Webb},
+  Title = {Enzyme Nomenclature 1992: Recommendations of the Nomenclature Committee of the International Union of Biochemistry and Molecular Biology and the Nomenclature and Classification of Enzymes},
+  Publisher = {Academic Press},
+  Year = {1992},
+  ISBN = {0122271645}
+}
+@phdthesis{Filippis_2012,
+  title={Graphlet Based Network Analysis of Protein Structures},
+  author={Filippis, Ioannis},
+  year={2012},
+  school={Freie Universit{\"a}t Berlin}
+}
+@article{Lappe_2009,
+  title={Designing evolvable libraries using multi-body potentials},
+  author={Lappe, Michael and Bagler, Ganesh and Filippis, Ioannis and Stehr, Henning and Duarte, Jose M and Sathyapriya, Rajagopal},
+  journal={Current opinion in biotechnology},
+  volume={20},
+  number={4},
+  pages={437--446},
+  year={2009},
+  publisher={Elsevier}
+}
+
