--- a/commands.tex
+++ b/commands.tex
@@ -7,6 +7,8 @@
 \usepackage[top=30mm, bottom=30mm, left=25mm, right=35mm, headheight=15pt]{geometry}
 % بسته‌‌ای برای ظاهر شدن شکل‌ها و تصاویر متن
 \usepackage{graphicx}
+\usepackage{subcaption}
+\usepackage[abs]{overpic}
 % بسته‌ای برای رسم کادر
 \usepackage{framed} 
 % بسته‌‌ای برای چاپ شدن خودکار تعداد صفحات در صفحه «معرفی پایان‌نامه»
@@ -66,7 +68,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 % دستوری برای تغییر نام کلمه «کتاب‌نامه» به «مراجع»
 \renewcommand{\bibname}{مراجع}
 %استفاده از کلمه‌ی نمودار به جای شکل
-\renewcommand{\figurename}{نمودار}
+\renewcommand{\figurename}{شکل}
 % دستوری برای تعریف واژه‌نامه انگلیسی به فارسی
 \newcommand\persiangloss[2]{#1\dotfill\lr{#2}\\}
 % دستوری برای تعریف واژه‌نامه فارسی به انگلیسی 
