--- a/biblio.bib
+++ b/biblio.bib
@@ -331,6 +331,15 @@
   year={2009},
   publisher={Springer}
 }
+@article{Shervashidze_2009,
+  year = {2009},
+  publisher = {JMLR. org},
+  volume = {5},
+  pages = {488-495},
+  author = {Shervashidze,N. and Vishwanathan,S. V. N. and Petri,T. H. and Mehlhorn,K. and Borgwardt,K. M.},
+  title = {{Efficient graphlet kernels for large graph comparison}},
+  journal = {Journal of Machine Learning Research},
+}
 @article{Shervashidze_2011,
   title={Weisfeiler-lehman graph kernels},
   author={Shervashidze, Nino and Schweitzer, Pascal and Van Leeuwen, Erik Jan and Mehlhorn, Kurt and Borgwardt, Karsten M},
@@ -348,10 +357,6 @@
   year={2014},
   organization={IEEE}
 }
-
-
-
-
 @article{Pearson_1988,
   doi = {10.1073/pnas.85.8.2444},
   url = {http://dx.doi.org/10.1073/pnas.85.8.2444},
@@ -643,13 +648,6 @@
   Publisher = {Garland Science},
   Year = {2014},
   ISBN = {0815344325}
-}
-@book{0122271645,
-  editors = {Edwin C. Webb},
-  Title = {Enzyme Nomenclature 1992: Recommendations of the Nomenclature Committee of the International Union of Biochemistry and Molecular Biology and the Nomenclature and Classification of Enzymes},
-  Publisher = {Academic Press},
-  Year = {1992},
-  ISBN = {0122271645}
 }
 @phdthesis{Filippis_2012,
   title={Graphlet Based Network Analysis of Protein Structures},
