Last commit for today!

--- a/backmatters.tex
+++ b/backmatters.tex
@@ -1,16 +1,16 @@
 {\small
 {\baselineskip=.75cm
-\include{dicfa2en}
+%\include{dicfa2en}
 \clearpage{\pagestyle{empty}\cleardoublepage}
-\include{dicen2fa}}
+%\include{dicen2fa}}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 {\baselineskip=.6cm
-\phantomsection
+%\phantomsection
 \addcontentsline{toc}{chapter}{نمایه}
 \printindex}
 \clearpage{\pagestyle{empty}\cleardoublepage}
-\phantomsection
-\addcontentsline{toc}{chapter}{مراجع}
+%\phantomsection
+%\addcontentsline{toc}{chapter}{مراجع}
 \bibliographystyle{chicago-fa}
 \bibliography{biblio}
 \clearpage{\pagestyle{empty}\cleardoublepage}
@@ -27,7 +27,7 @@
 \latindegree{M. Sc. }
 \latinsubject{Department of Computer Science}
 \latinfield{Bioinformatics}
-\latintitle{Graphlet Kernels}
+\latintitle{Gaussian Graphlet Kernel and its application on protein function prediction}
 \firstlatinsupervisor{Dr. Changiz Eslahchi}
 \firstlatinadvisor{Dr. Mehdi Mirzaie}
 \latinname{Morteza}
