--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -8,7 +8,7 @@
 %~~~
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \clearpage
-\pagenumbering{adadi}
+%\pagenumbering{adadi}
 
 % دانشگاه خود را وارد کنید
 \university{شهید بهشتی}
@@ -21,7 +21,7 @@
 % گرایش خود را وارد کنید
 \field{بیوانفورماتیک}
 % عنوان پایان‌نامه را وارد کنید
-\title{گرافلت کرنل‌ها}
+\title{گرافلت کرنل‌ گاوسی و کاربرد آن در تشخیص عملکرد پروتئین}
 % نام استاد(ان) راهنما را وارد کنید
 \firstsupervisor{دکتر چنگیز اصلاحچی}
 %\secondsupervisor{استاد راهنمای دوم}
@@ -38,7 +38,7 @@
 \keywords{گراف، گرافلت، یادگیری ماشین، کرنل، بیوانفورماتیک، عملکرد پروتئین}
 % چکیده پایان‌نامه را وارد کنید
 \fa-abstract{\noindent
-در این پایانامه
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده روبرو است. بسیاری از این داده‌ها در قالب روابط بین موجودیت‌ها معنی پیدا می‌کنند. گراف، یک ساختار انعطاف‌پذیر و مناسب برای مدل‌سازی این نوع داده‌ها بدست می‌دهد. متأسفانه علیرغم اهمیت این موضوع، تکنیک‌های یادگیری ماشین روی ساختار گراف، دچار کمبود‌های جدی هستند و هنوز به تکامل نرسیده‌اند. دلیل این امر شاید پیچیده‌بودن مقایسه دو گراف باشد. در این پایان‌نامه، راه بهینه‌ای برای مقایسه دو گراف ارائه می‌دهیم و تابع کرنلی را تعریف می‌کنیم که به کمک آن می‌توان از الگوریتم‌های یادگیری ماشین روی داده‌های گراف به نحو بهینه و با دقت بالا استفاده کرد.
 }
 \newpage
 \thispagestyle{empty}
@@ -94,7 +94,11 @@
 تشکر و قدردانی
 }
 \\[2cm]
-سپاس خدای را که قلم آفرید...
+نخست، پروردگارم را می‌ستایم به پاس رحمت‌های بی منتهایش. و سپس، پدر و مادرم را گرامی می‌دارم به پاس صبوریشان و همسرم را عزیز می‌شمارم به پاس همراهیش.
+
+از استاد ارجمندم، جناب آقای دکتر چنگیز اصلاحچی که با حسن خلق و فروتنی، از هیچ کمکی دریغ ننمودند و در این راه من را راهنمایی کردند، تشکر می‌کنم. تنش به ناز طبیبان بی‌نیاز باد.
+
+از جناب آقای دکتر مهدی میرزایی که در انجام این طرح از کمک‌هایشان استفاده کردم تشکر می‌کنم.
 
 \signature 
 \newpage
