--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \input{commands}
 \begin{document}
 \frontmatter
-%\input{frontmatters}
+\input{frontmatters}
 %\input{preface}
 \tableofcontents
 %\listoffigures
@@ -17,7 +17,7 @@
 \input{chapter3}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \backmatter
-\bibliographystyle{chicago-fa}
-\bibliography{biblio}
-%\input{backmatters}
+%\bibliographystyle{chicago-fa}
+%\bibliography{biblio}
+\input{backmatters}
 \end{document}
