--- a/chapter2.tex
+++ b/chapter2.tex
@@ -1,5 +1,5 @@
 \chapter{گرافلت کرنل گاوسی}\label{chap:gaussian-graphlet-kernel}
-گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{\فرضیه بازسازی گراف}\پانوشت{\متن‌لاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. بنابراین انتظار داریم اگر دو گراف شبیه هم باشند، گردایه‌ی زیرگراف‌های آن‌ها نیز مشابه باشد. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، این مقایسه دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
+گرافلت‌ها انتخاب خوبی برای مقایسه دو گراف هستند. دلیل این انتخاب اولاً \خمیده{فرضیه بازسازی گراف}\پانوشت{\متن‌لاتین{graph reconstruction conjecture}}\جستار{Kelly_1957} است که بیان می‌کند هر گراف بطور یکتا توسط زیرگراف‌هایش مشخص می‌شود. بنابراین انتظار داریم اگر دو گراف شبیه هم باشند، گردایه‌ی زیرگراف‌های آن‌ها نیز مشابه باشد. ثانیاً به دلیل استفاده از تعداد زیرگراف‌های با اندازه ثابت، این مقایسه دچار مشکل رفت و برگشت و هالتینگ نمی‌شود.
 در این فصل ابتدا نحوه شمارش گرافلت‌ها را شرح داده و سپس گرافلت کرنل گاوسی را معرفی می‌کنیم و به سنجش قدرت آن در جداسازی مدل‌های تصادفی گراف از یکدیگر، می‌پردازیم.
 
 \section{گرافلت‌ها و شمارش آن‌ها}
@@ -392,7 +392,7 @@
 \subsection{تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها}
 
 \subsection{مقایسه سرعت اجرا}
-برای نوشتن ریاضی $F$ خیلی خوبه
+
 \section{گرافلت کرنل گاوسی}
 فرض کنید برای دو گراف $G$ و $G^\prime$ ، بردار شمارش گرافلت‌ها، $C_G$ و $C_{G^\prime}$ را در اختیار داریم. حال باید این دو بردار را با یکدیگر مقایسه کرده و فاصله آن‌ها را تعیین کنیم. برای کاهش تأثیر اندازه گراف‌ بر مقایسه و همچنین جلوگیری از تأثیر فراوانی زیاد یک گرافلت بر کل مقایسه، بردارها را به صورت
 \begin{equation}
@@ -407,5 +407,15 @@ k(G,G') = exp(-\gamma\parallel \hat{C}_G - \hat{C}_{G'}\parallel^2)
 تعریف می‌کنیم که در آن $\gamma = \dfrac{1}{2\sigma^2}$ است.
 
 \section{عملکرد گرافلت کرنل گاوسی}
+\subsection{داده‌‌ها}
+\subsection{شرایط آزمون}
+\subsection{گرافلت یا اوربیت؟}\label{sec:graphlet-vs-orbit}
+\subsection{میزان دقت در تشخیص مدل‌های تصادفی گراف}
+
 \section{گرافلت کرنل گاوسی روی رئوس}
 \section{عملکرد گرافلت کرنل گاوسی روی رئوس}
+\subsection{داده‌ها}
+\subsection{شرایط آزمون}
+\subsection{نتایج}
+
+\section{جمع‌بندی}
