--- a/chapter3.tex
+++ b/chapter3.tex
@@ -130,7 +130,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
         \caption{ENZYME}
     \end{subfigure}
 \caption{گرافلت کرنل گاوسی (GGK) و انواع گرافلت کرنل (GK). در این شکل، \متن‌لاتین{GK C5}، \متن‌لاتین{GK C4} و \متن‌لاتین{GK C3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های ۵، ۴ و ۳ رأسی را می‌شمارند. \متن‌لاتین{GK A5}، \متن‌لاتین{GK A4} و \متن‌لاتین{GK A3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های همبند و ناهمبند ۵، ۴ و ۳ رأسی را می‌شمارند. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ نشان‌دهنده اندازه نمونه انتخاب شده برای تخمین تعداد گرافلت‌هاست.}
-\label{fig:ggk-gk-accuracy}
+\label{fig:gk-ggk-accuracy}
 \end{figure}
 
 \begin{table}[th]
@@ -162,3 +162,43 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 با توجه به جداول، برای هر دو پایگاه داده ENZYME و DD ، کرنل GGK بهترین عملکرد را داشته است به طوری که به ترتیب، بهترین نتایج روی این پایگاه‌ها را ۵٪ و ۴٪ بهبود داده‌است.
 
 امکان اجرای برخی از کرنل‌ها بر روی پایگاه داده DD وجود نداشت. کرنل ویسفیلر-لیمن یالی، نیاز به حافظه زیادی دارد که بر روی سیستم با ۴ گیگابایت رم قابل اجرا نبود. هرچند امکان اجرای این کرنل بر روی یک سیستم با حافظه بالاتر وجود دارد، اما در صورت استفاده از یک پایگاه داده بزرگتر، بازهم با این مشکل روبرو خواهیم شد و نمی‌توان از این مسئله به سادگی عبور کرد. برای کرنل کوتاه‌ترین مسیر نیز چنین اتفاقی رخ می‌دهد و بعد از اجرا، کرنل به سرعت فضای موجود را اشغال کرده و با کمبود فضا مواجه می‌شود. اجرای دو کرنل گشت تصادفی و ویسفلر-لیمن کوتاه‌ترین مسیر، بیش از یک روز به طول انجامید بنابراین از ادامه کار آن‌ها جلوگیری شد زیرا مقایسه در این حالت معنای خاصی نداشت.
+
+
+\begin{table}[t]
+\centering
+\begin{tabular}{|c|c|c|}
+    \hline
+    کرنل/پایگاه داده & ENZYMES & DD \\ \hline
+    \lr{GGK} & \lr{64.68 (±0.67)} & \lr{80.08 (±0.39)} \\ \hline
+    \lr{GK C5} & \lr{38.06 (±1.35)} & \lr{75.20 (±0.71)} \\ \hline
+    \lr{WL subtree} & \lr{53.06 (±1.26)} & \lr{76.69 (±0.69)} \\ \hline
+    \lr{WL edge} & \lr{53.78 (±1.26)} & - \\ \hline
+    \lr{WL shortest path} & \lr{59.05 (±1.05)} & - \\ \hline
+    \lr{Random Walk} & \lr{21.68 (±0.94)} & - \\ \hline
+    \lr{Shortest Path} & \lr{41.68 (±1.79)} & - \\ \hline
+\end{tabular}
+\caption{دقت دسته بندی ($\pm$ انحراف معیار) 
+کرنل‌های مختلف روی پایگاه‌های ENZYME و DD.}
+\label{tab:ggk-vs-others}
+\end{table}
+
+\begin{table}[t]
+\centering
+\begin{tabular}{|c|c|c|}
+    \hline
+    کرنل/پایگاه داده & ENZYMES & DD \\ \hline
+    \lr{GGK} & \lr{4"} & \lr{8.54"} \\ \hline
+    \lr{GK C5} & \lr{2h 3'8"} & \lr{4h 33'52"}  \\ \hline
+    \lr{WL subtree} & \lr{20"} & \lr{2'35"} \\ \hline
+    \lr{WL edge} & \lr{11"} & - \\ \hline
+    \lr{WL shortest path} & \lr{1'3"} & - \\ \hline
+    \lr{Random Walk} & \lr{12'19"} & - \\ \hline
+    \lr{Shortest Path} & \lr{5"} & - \\ \hline
+\end{tabular}
+\caption{
+مدت زمان اجرای گراف کرنل‌ها روی دو پایگاه ENZYME و DD. خطوط تیره، کمبود حافظه و یا مدت زمان بیش از یک روز محاسبه را نشان می‌دهند.
+}
+\label{tab:ggk-vs-others-runtime}
+\end{table}
+
+\section{جمع‌بندی}
