--- a/commands.tex
+++ b/commands.tex
@@ -32,10 +32,10 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 % بسته‌ لازم برای تنظیم سربرگ‌ها
 \usepackage{fancyhdr}
 % بسته‌ای برای ظاهر شدن «مراجع» و «نمایه» در فهرست مطالب
-%\usepackage[nottoc]{tocbibind}
+\usepackage[nottoc]{tocbibind}
 % دستورات مربوط به ایجاد نمایه
-%\usepackage{makeidx}
-%\makeindex
+\usepackage{makeidx}
+\makeindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{secnumdepth}{3}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
